Fixed pre tag not wrapping text

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -167,6 +167,7 @@ pre {
   border:      initial;
   padding:     initial;
   font-family: inherit;
+  white-space: pre-wrap;
 }
 
 //This is the banner thing at the top after saving
